package org.example.firstTask;

public class FirstTaskFori {
    public static void main(String[] args) {
        for (int i = 20; i < 39; i++) {
            if(i % 2 == 0 || i % 3 == 0){
                System.out.println(i);
            }
        }
    }
}
