package org.example.secondTask.exception;

public class DiskNotFoundException extends RuntimeException{
}
