package org.example.secondTask.exception;

public class OutOfStockException extends RuntimeException{
}
